Created recipe page template and updated index page with a list

--- a/recipes/chimken.html
+++ b/recipes/chimken.html
@@ -2,19 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lasagna</title>
+        <title>Chimkin</title>
     </head>
 
     <body>
-        <h1>Lasagna</h1>
-        <img src="../images/garfield.png" alt="Image of Garfield">
+        <h1>Chimkin</h1>
+        <img src="../images/chimken.jpg" alt="Image of Chimkin">
         <h3>Description</h3>
-        <p>Lasagna is so good! Even Garfield likes lasagna!</p>
+        <p>Chimkin is so good! mmmmmmmmmmmmmmmm</p>
         <h3>Ingredients</h3>
         <ul>
             <li>TLC</li>
-            <li>Souls</li>
-            <li>Fard</li>
+            <li>Chimken</li>
+            <li>Chicken</li>
         </ul>
         <h3>Steps</h3>
         <ol>
