--- a/recipes/pho.html
+++ b/recipes/pho.html
@@ -2,19 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lasagna</title>
+        <title>Pho</title>
     </head>
 
     <body>
-        <h1>Lasagna</h1>
-        <img src="../images/garfield.png" alt="Image of Garfield">
+        <h1>Pho</h1>
+        <img src="../images/pho.jpg" alt="Image of Pho">
         <h3>Description</h3>
-        <p>Lasagna is so good! Even Garfield likes lasagna!</p>
+        <p>Pho is so good! I love pho!</p>
         <h3>Ingredients</h3>
         <ul>
             <li>TLC</li>
             <li>Souls</li>
-            <li>Fard</li>
+            <li>Noodler</li>
         </ul>
         <h3>Steps</h3>
         <ol>
